# Steam-Pipe-Dev

./: .gitignore  BACKEND-STRUCTURE-ANALYSIS.md  CLAUDE.md  HYBRID-MODEL-DESIGN.md  ITEM-LOCKING-MECHANISMS.md  PROJECT-STRUCTURE.md  PURE-P2P-IMPLEMENTATION.md  README.md  STEAM-INTEGRATION-CORRECTED.md  WALLET-FIRST-ARCHITECTURE.md  WEB3-ARCHITECTURE-UPGRADE.md  package-lock.json
backend/: .env.example  README.md  api-server.js  package-lock.json  package.json  server.js  simple-server.js  steam-trade-manager.js
backend/config/: database.js
backend/models/: User.js
backend/routes/: authRoutes.js  pricesRoutes.js  steamRoutes.js  userRoutes.js
backend/services/: steamService.js
oracle-service/: package.json
oracle-service/src/: index.ts
oracle-service/src/services/: SteamInventoryWatcher.ts
programs/trade-escrow/: Cargo.toml
programs/trade-escrow/src/: errors.rs  lib.rs  utils.rs
programs/trade-escrow/src/instructions/: admin.rs  initialize.rs  lock.rs  mod.rs  refund.rs  settle.rs
programs/trade-escrow/src/state/: config.rs  escrow.rs  mod.rs
steampipe-frontend-vite/: .env.example  package-lock.json  package.json  tsconfig.app.json
steampipe-frontend-vite/src/: App.tsx  config-updated.ts  config.ts  index.css
steampipe-frontend-vite/src/components/: ApiStatus.tsx  Dashboard.css  Dashboard.tsx  Header.tsx  MarketComparison.tsx  NetworkWarningModal.tsx  OrderStatus.tsx  PriceComparisonDashboard.tsx  PriceDisplay.tsx  PriceTest.tsx  PriceTestComponent.tsx  Sidebar.tsx  SteamAccountManager.css  SteamAccountManager.tsx  SteamSettings.tsx  (+1 more)
(+41 files in other folders)
