[package]
name = "trade-escrow"
version = "0.1.0"
description = "Pure P2P Steam skin trading escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trade_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }